istio-traffic-split/iac/01-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traffic-split
  labels:
    istio-injection: enabled
